2005-05-26  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Brother-4550.xml, printer/Brother-DCP-1200.xml,
	  printer/Brother-HL-1020.xml, printer/Brother-HL-1030.xml,
	  printer/Brother-HL-1040.xml, printer/Brother-HL-1050.xml,
	  printer/Brother-HL-1060.xml, printer/Brother-HL-1070.xml,
	  printer/Brother-HL-10h.xml, printer/Brother-HL-10V.xml,
	  printer/Brother-HL-1250.xml, printer/Brother-HL-1260.xml,
	  printer/Brother-HL-1270N.xml, printer/Brother-HL-1435.xml,
	  printer/Brother-HL-1440.xml, printer/Brother-HL-1450.xml,
	  printer/Brother-HL-1660e.xml, printer/Brother-HL-2060.xml,
	  printer/Brother-HL-2400CeN.xml, printer/Brother-HL-2600CN.xml,
	  printer/Brother-HL-3400CN.xml, printer/Brother-HL-3450CN.xml,
	  printer/Brother-HL-4000CN.xml, printer/Brother-HL-4Ve.xml,
	  printer/Brother-HL-630.xml, printer/Brother-HL-660.xml,
	  printer/Brother-HL-720.xml, printer/Brother-HL-730.xml,
	  printer/Brother-HL-760.xml, printer/Brother-HL-820.xml,
	  printer/Brother-HL-8.xml, printer/Brother-HL-960.xml,
	  printer/Brother-MFC-4350.xml, printer/Brother-MFC-6550MC.xml,
	  printer/Brother-MFC-8300.xml, printer/Brother-MFC-9050.xml,
	  printer/Brother-MFC-9500.xml, printer/Brother-MFC-9600.xml,
	  printer/Brother-MFC-P2500.xml: Added link to Brother's driver
	  site.

2005-05-25  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-LaserJet_4250.xml: Added IEEE 1284 and SNMP information
	  from RH bug #157883.

2005-05-19  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-DeskJet_3845.xml: Added IEEE 1284 information (RH
	  bug #157760).

2005-05-11  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Corrected character list in "<arg_allowedchars>" in the
	  example string option XML file. Improved instructions for
	  "<arg_allowedchars>".

2005-05-03  Tim Waugh  <twaugh@redhat.com>

	* printer/Epson-Stylus_CX5400.xml: Added IEEE 1284 information (RH
	  bug #156661).

2005-04-20  Till Kamppeter <till.kamppeter@gmx.net>
