@@ -1,6 +1,6 @@
-<printer id="printer/Epson-Stylus_Photo_R800">
+<printer id="printer/Epson-Stylus_Photo_R1800">
   <make>Epson</make>
-  <model>Stylus Photo R800</model>
+  <model>Stylus Photo R1800</model>
   <mechanism>
     <inkjet/>
     <color/>
@@ -31,6 +31,8 @@
   <!--no "contrib_url"-->
   <comments>
     <en>
+
+    A3/wide-format version of the Epson Stylus Photo R800.&lt;p&gt;
 
     For this printer at least <a
     href="http://gimp-print.sf.net/">Gutenprint 5.x is needed,
