@@ -1,3 +1,9 @@
+2005-05-28  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Epson-Stylus_Photo_R800.xml,
+	  printer/Epson-Stylus_Photo_R1800.xml: Added Epson Stylus Photo
+	  R1800, updated text and rating for the R800 and R1800.
+
 2005-05-26  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Brother-4550.xml, printer/Brother-DCP-1200.xml,
